Modify extract text endpoints
